// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`normalizeTrainServicesData example 1 1`] = `
[
  {
    "destinationArrivalTime": "09:21",
    "durationMinutes": 18,
    "operator": "South Western Railway",
    "operatorCode": "SW",
    "originArrivalTime": "09:02",
    "originDepartureTime": "09:03",
    "platform": "2",
    "scheduleOriginArrivalTime": "09:02",
    "scheduleOriginDepartureTime": "09:03",
    "status": "on-time",
  },
  {
    "arrivalLateByMinutes": 12,
    "departureLateByMinutes": 12,
    "destinationArrivalTime": "09:37",
    "durationMinutes": 14,
    "operator": "CrossCountry",
    "operatorCode": "XC",
    "originArrivalTime": "09:22",
    "originDepartureTime": "09:23",
    "platform": "1",
    "scheduleOriginArrivalTime": "09:10",
    "scheduleOriginDepartureTime": "09:11",
    "status": "late",
  },
  {
    "destinationArrivalTime": "10:04",
    "durationMinutes": 15,
    "operator": "South Western Railway",
    "operatorCode": "SW",
    "originArrivalTime": "09:47",
    "originDepartureTime": "09:49",
    "platform": "2",
    "scheduleOriginArrivalTime": "09:47",
    "scheduleOriginDepartureTime": "09:49",
    "status": "on-time",
  },
  {
    "destinationArrivalTime": "10:21",
    "durationMinutes": 18,
    "operator": "South Western Railway",
    "operatorCode": "SW",
    "originArrivalTime": "10:02",
    "originDepartureTime": "10:03",
    "platform": "2",
    "scheduleOriginArrivalTime": "10:02",
    "scheduleOriginDepartureTime": "10:03",
    "status": "on-time",
  },
  {
    "destinationArrivalTime": "10:26",
    "durationMinutes": 15,
    "operator": "CrossCountry",
    "operatorCode": "XC",
    "originArrivalTime": "10:09",
    "originDepartureTime": "10:11",
    "platform": null,
    "scheduleOriginArrivalTime": "10:09",
    "scheduleOriginDepartureTime": "10:11",
    "status": "on-time",
  },
  {
    "destinationArrivalTime": "11:04",
    "durationMinutes": 15,
    "operator": "South Western Railway",
    "operatorCode": "SW",
    "originArrivalTime": "10:48",
    "originDepartureTime": "10:49",
    "platform": null,
    "scheduleOriginArrivalTime": "10:48",
    "scheduleOriginDepartureTime": "10:49",
    "status": "on-time",
  },
]
`;

exports[`normalizeTrainServicesData example 2 1`] = `
[
  {
    "arrivalLateByMinutes": 20,
    "departureLateByMinutes": 20,
    "destinationArrivalTime": "09:45",
    "durationMinutes": 14,
    "operator": "CrossCountry",
    "operatorCode": "XC",
    "originArrivalTime": "09:30",
    "originDepartureTime": "09:31",
    "platform": "1",
    "scheduleOriginArrivalTime": "09:10",
    "scheduleOriginDepartureTime": "09:11",
    "status": "late",
  },
  {
    "destinationArrivalTime": "10:04",
    "durationMinutes": 15,
    "operator": "South Western Railway",
    "operatorCode": "SW",
    "originArrivalTime": "09:47",
    "originDepartureTime": "09:49",
    "platform": "2",
    "scheduleOriginArrivalTime": "09:47",
    "scheduleOriginDepartureTime": "09:49",
    "status": "on-time",
  },
  {
    "destinationArrivalTime": "10:21",
    "durationMinutes": 18,
    "operator": "South Western Railway",
    "operatorCode": "SW",
    "originArrivalTime": "10:02",
    "originDepartureTime": "10:03",
    "platform": "2",
    "scheduleOriginArrivalTime": "10:02",
    "scheduleOriginDepartureTime": "10:03",
    "status": "on-time",
  },
  {
    "destinationArrivalTime": "10:26",
    "durationMinutes": 15,
    "operator": "CrossCountry",
    "operatorCode": "XC",
    "originArrivalTime": "10:09",
    "originDepartureTime": "10:11",
    "platform": "1",
    "scheduleOriginArrivalTime": "10:09",
    "scheduleOriginDepartureTime": "10:11",
    "status": "on-time",
  },
  {
    "destinationArrivalTime": "11:04",
    "durationMinutes": 15,
    "operator": "South Western Railway",
    "operatorCode": "SW",
    "originArrivalTime": "10:48",
    "originDepartureTime": "10:49",
    "platform": null,
    "scheduleOriginArrivalTime": "10:48",
    "scheduleOriginDepartureTime": "10:49",
    "status": "on-time",
  },
  {
    "operator": "South Western Railway",
    "operatorCode": "SW",
    "scheduleOriginArrivalTime": "11:02",
    "scheduleOriginDepartureTime": "11:03",
    "status": "cancelled",
  },
  {
    "destinationArrivalTime": "11:26",
    "durationMinutes": 15,
    "operator": "CrossCountry",
    "operatorCode": "XC",
    "originArrivalTime": "11:09",
    "originDepartureTime": "11:11",
    "platform": null,
    "scheduleOriginArrivalTime": "11:09",
    "scheduleOriginDepartureTime": "11:11",
    "status": "on-time",
  },
]
`;

exports[`normalizeTrainServicesData example 3 1`] = `
[
  {
    "arrivalLateByMinutes": 5,
    "departureLateByMinutes": 9,
    "destinationArrivalTime": "15:52",
    "durationMinutes": 40,
    "operator": "South Western Railway",
    "operatorCode": "SW",
    "originArrivalTime": "15:08",
    "originDepartureTime": "15:12",
    "platform": "3",
    "scheduleOriginArrivalTime": "15:03",
    "scheduleOriginDepartureTime": "15:03",
    "status": "late",
  },
  {
    "operator": "South Western Railway",
    "operatorCode": "SW",
    "scheduleOriginArrivalTime": "15:11",
    "scheduleOriginDepartureTime": "15:12",
    "status": "cancelled",
  },
  {
    "destinationArrivalTime": "16:36",
    "durationMinutes": 72,
    "operator": "South Western Railway",
    "operatorCode": "SW",
    "originArrivalTime": null,
    "originDepartureTime": "15:24",
    "platform": "1",
    "scheduleOriginArrivalTime": null,
    "scheduleOriginDepartureTime": "15:24",
    "status": "on-time",
  },
  {
    "operator": "South Western Railway",
    "operatorCode": "SW",
    "scheduleOriginArrivalTime": "15:28",
    "scheduleOriginDepartureTime": "15:30",
    "status": "cancelled",
  },
  {
    "destinationArrivalTime": "16:20",
    "durationMinutes": 43,
    "operator": "South Western Railway",
    "operatorCode": "SW",
    "originArrivalTime": "15:36",
    "originDepartureTime": "15:37",
    "platform": "3",
    "scheduleOriginArrivalTime": "15:36",
    "scheduleOriginDepartureTime": "15:37",
    "status": "on-time",
  },
  {
    "destinationArrivalTime": "17:02",
    "durationMinutes": 68,
    "operator": "South Western Railway",
    "operatorCode": "SW",
    "originArrivalTime": null,
    "originDepartureTime": "15:54",
    "platform": null,
    "scheduleOriginArrivalTime": null,
    "scheduleOriginDepartureTime": "15:54",
    "status": "on-time",
  },
  {
    "operator": "South Western Railway",
    "operatorCode": "SW",
    "scheduleOriginArrivalTime": "15:55",
    "scheduleOriginDepartureTime": "15:57",
    "status": "cancelled",
  },
  {
    "operator": "South Western Railway",
    "operatorCode": "SW",
    "platform": null,
    "scheduleOriginArrivalTime": "16:03",
    "scheduleOriginDepartureTime": "16:03",
    "status": "delayed",
  },
  {
    "arrivalLateByMinutes": 8,
    "departureLateByMinutes": 8,
    "destinationArrivalTime": "17:10",
    "durationMinutes": 50,
    "operator": "South Western Railway",
    "operatorCode": "SW",
    "originArrivalTime": "16:19",
    "originDepartureTime": "16:20",
    "platform": null,
    "scheduleOriginArrivalTime": "16:11",
    "scheduleOriginDepartureTime": "16:12",
    "status": "late",
  },
  {
    "destinationArrivalTime": "17:36",
    "durationMinutes": 72,
    "operator": "South Western Railway",
    "operatorCode": "SW",
    "originArrivalTime": null,
    "originDepartureTime": "16:24",
    "platform": null,
    "scheduleOriginArrivalTime": null,
    "scheduleOriginDepartureTime": "16:24",
    "status": "on-time",
  },
]
`;
